# Red

./: .gitmodules  CMakeLists.txt  README.md
sources/: main.cpp
sources/foundation/: application.cpp  application.hpp
sources/game/: game_layer.cpp  game_layer.hpp
sources/utils/: helpers.cpp  helpers.hpp  layers.hpp
